# portfolio

./: .firebaserc  .gitignore  Cargo.toml  README.md  deploy.sh  firebase.json  index.html  input.css  package-lock.json  package.json  tailwind.config.js
.firebase/: hosting.cHVibGlj.cache
.github/workflows/: firebase-hosting-pull-request.yml
end2end/tests/: example.spec.ts
public/: index.html  output-1d521f1fb891c326.css  portfolio-d015453adbccc622.js
src/: lib.rs  main.rs
src/components/: about.rs  contact.rs  homepage.rs  icons.rs  mod.rs  navbar.rs  project.rs  projects.rs  start.rs
style/: output.css
