[package]
name = "portfolio"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1"
console_log = "0.2"

leptos = {version = "0.2", features = ["serde", "csr"]}
leptos_router = {version = "0.2", features = ["csr"]}
leptos_meta = {version = "0.2", features = ["csr"]}

log = "0.4"
simple_logger = "4"
wasm-bindgen = "0.2"
regex = "1.8.1"
lazy_static = "1.4.0"
gloo-net = {version = "0.2.6", features = ["http"]}
